# zephyr

./: CODEOWNERS  west.yml
arch/xtensa/core/: xtensa-asm2.c
boards/xtensa/nxp_adsp_imx8ulp/: Kconfig.board  Kconfig.defconfig  nxp_adsp_imx8ulp.dts  nxp_adsp_imx8ulp.yaml  nxp_adsp_imx8ulp_defconfig
drivers/mbox/: mbox_nxp_imx_mu.c
drivers/misc/addr_translation/: addr_translation.c
drivers/timer/: xtensa_sys_timer.c
dts/bindings/misc/: zephyr,addr-translation.yaml
dts/xtensa/nxp/: nxp_imx8.dtsi  nxp_imx8ulp.dtsi
include/: spinlock.h
include/arch/xtensa/: irq.h
kernel/: init.c  system_work_q.c  thread.c  work.c
lib/open-amp/: CMakeLists.txt  Kconfig  addr_translation.c  addr_translation.h  resource_table.c  resource_table.h
lib/open-amp/addr_translation/: addr_translation.c  addr_translation.h
lib/open-amp/vendor_rsc_table/: nxp_resource_table.h
samples/application_development/proprietary_lib/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/application_development/proprietary_lib/include/: input.h
samples/application_development/proprietary_lib/src/: main.c  math_ops.c  nature_dsp_wrapper.c
samples/subsys/ipc/openamp_rsc_table/boards/: imx8mp_evk_mimx8ml8_m7.overlay  imx8ulp_evk_mimx8ud7_adsp.conf  imx8ulp_evk_mimx8ud7_adsp.overlay
samples/subsys/ipc/openamp_rsc_table/src/: main_remote.c
scripts/dts/python-devicetree/src/devicetree/: edtlib.py
soc/xtensa/nxp_adsp/imx8ulp/: Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  linker.ld
subsys/dsp/: CMakeLists.txt  Kconfig
subsys/dsp/xtensandsp/: CMakeLists.txt
subsys/dsp/xtensandsp/public/: zdsp_backend.h  zdsp_backend_f16.h
subsys/logging/: log_core.c
tests/subsys/dsp/basicmath/: prj_xtensa.conf  testcase.yaml
(+5 files in other folders)
